--- a/env/pyvenv.cfg
+++ b/env/pyvenv.cfg
@@ -1,6 +1,6 @@
 home = /Library/Frameworks/Python.framework/Versions/3.11/bin
 include-system-site-packages = false
 version = 3.11.1
-prompt = 'pomodoroTimer'
+prompt = 'MacPom'
 executable = /Library/Frameworks/Python.framework/Versions/3.11/bin/python3.11
-command = /Library/Frameworks/Python.framework/Versions/3.11/bin/python3 -m venv --prompt="pomodoroTimer" /Users/danielgalvan/Python/PomodoroTimer/env
+command = /Library/Frameworks/Python.framework/Versions/3.11/bin/python3 -m venv --prompt="MacPom" /Users/danielgalvan/Python/MacPom/env
